# RINGS

./: .gitignore  README.md
fiveg-cli/: Cargo.toml
fiveg-cli/src/: cli.rs  lib.rs  schema.rs
iac/: README.md  core_playbook.yaml  kafka_playbook.yaml  master.yaml  ran_playbook.yaml  variables.yaml
iac/files/: go_vars.sh
iac/scripts/: make_free5gc.sh  set_up_networking.sh  test_all_free5gc.sh
iac/tasks/: add_vm_to_hosts.yaml  build_core.yaml  build_ueransim.yaml  configure_calico.yaml  configure_containerd.yaml  initialize_k8_cluster.yaml  install_ansible_requirements.yaml  install_docker.yaml  install_go.yaml  install_gtp.yaml  install_k8.yaml  install_multus.yaml  install_node.yaml  install_rust.yaml  join_k8_cluster.yaml  make_docker_registry.yaml  reset_k8_info.yaml  set_free5gc_params.yaml  set_ueransim_params.yaml  set_up_networking.yaml
k8/hello_tcp/: Cargo.toml  Dockerfile_client  Dockerfile_server  client_deployment.yaml  docker-compose.yaml  server_deployment.yaml  server_service.yaml
k8/hello_tcp/src/: cli.rs
tps/: Cargo.toml  README.md  analysis.ipynb  many_ue_pub.py  requirements.txt
tps/logs/: send_receive_times.csv
tps/notesbooks/: multiple_ue_on_single_device.ipynb
tps/notesbooks/.ipynb_checkpoints/: analysis-checkpoint.ipynb
tps/src/: cli.rs  interfaces.rs  lib.rs  message.rs
